force-app/main/default/objects/Part_Line__c/Part_Line__c.object-meta.xml
<CustomObject>
    <description>작업에 사용된 부품 라인. 재고 차감의 트리거 소스</description>
    <label>Part Line</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>