force-app/main/default/objects/Part_Line__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>사용된 부품</description>
    <label>Part</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipName>Part_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>