force-app/main/default/objects/Part_Line__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <description>상위 작업 (Master-Detail, 작업 삭제 시 함께 정리됨)</description>
    <label>Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipName>Part_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>