force-app/main/default/objects/Part_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Work_Order__c</columns>
    <columns>Part__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Line_Total__c</columns>
    <label>All</label>
</ListView>